--- a/.gitignore
+++ b/.gitignore
@@ -2,12 +2,12 @@
 /node_modules
 /public/hot
 /public/storage
-/storage/*.key
-/vendor
+/core/storage/*.key
+/core/vendor
 /.idea
 /.vagrant
-Homestead.json
-Homestead.yaml
-npm-debug.log
+/core/Homestead.json
+/core/Homestead.yaml
+/core/npm-debug.log
 yarn-error.log
-.env
+/core/.env
