add cache to database fetch, set cache control to htaccess

--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,21 @@
+<IfModule mod_headers.c>
+    <FilesMatch \.(css|js|ico|jpe?g|png|gif|swf)$>
+        Header set Cache-Control "max-age=31536000"
+ </FilesMatch>
+</IfModule>
+
+<IfModule mod_expires.c>
+    ExpiresActive On
+    ExpiresDefault "access"
+    ExpiresByType text/css "access plus 1 year"
+    ExpiresByType application/javascript "access plus 1 year"
+    ExpiresByType text/javascript "access plus 1 year"
+    ExpiresByType image/x-icon "access plus 2592000 seconds"
+    ExpiresByType image/jpeg "access plus 2592000 seconds"
+    ExpiresByType image/png "access plus 2592000 seconds"
+    ExpiresByType image/gif "access plus 2592000 seconds"
+</IfModule>
+
 <IfModule mod_rewrite.c>
     <IfModule mod_negotiation.c>
         Options -MultiViews -Indexes
